ok i think *this* should fix footnotes on mobile?

--- a/newstyle.css
+++ b/newstyle.css
@@ -193,5 +193,6 @@ details.note summary
     cursor: pointer;
     font-weight: bold;
     min-width: auto;
+    width: fit-content;
     user-select: none;
 }
